--- a/styles/mobile-responsive.css
+++ b/styles/mobile-responsive.css
@@ -1,8 +1,44 @@
 @media screen and (max-width:426px) {
-    nav,.nav-links ul{
+
+    nav,
+    .nav-links ul {
         flex-direction: column;
     }
-    nav{
+
+    nav {
         box-shadow: none;
+        margin-top: 6rem;
+    }
+
+    .goat-container {
+        flex-direction: column-reverse;
+        margin-top: 5rem;
+        gap: 1.5rem;
+    }
+
+    .goat-content,
+    .goat-img {
+        width: 80vw;
+        margin: 0 auto;
+    }
+    .goat-content{
+        padding: 3rem 2rem;
+    }
+    .goat-content h2{
+        font-size: 2rem;
+    }
+    .goat-content h1 {
+        font-size: 4rem;
+    }
+    .goat-btns{
+        display: flex;
+    }
+    .btn {
+        padding: 0.8rem 1.5rem;
+        gap: 0.4rem;
+        color: white;
+        border-radius: 2rem;
+        border: none;
+        margin: 1.5rem 0.6rem 0 0;
     }
 }
