--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;500;600;700;800&display=swap');
 
+/* shared styles started */
 * {
     margin: 0;
     padding: 0;
@@ -10,6 +11,16 @@ body {
     font-family: 'Work Sans', sans-serif;
 }
 
+.btn {
+    padding: 1.25rem 2.5rem;
+    gap: 10px;
+    color: white;
+    border-radius: 3rem;
+    border: none;
+    margin: 1.5rem 0.6rem 0 0;
+}
+
+/* shared styles ended */
 /* nav styles started */
 nav {
     height: auto;
@@ -55,6 +66,60 @@ nav {
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
     padding: 1rem 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
 /* nav styles ended */
+/* goat section style */
+.goat-container {
+    display: flex;
+    gap: 4rem;
+}
+
+.goat-content,.goat-img {
+    width: calc(50% - 2rem);
+    padding-right: 10%;
+}
+
+.goat-content {
+    /* margin-top: 9rem; */
+    padding: 9rem 10%;
+    text-align: left;
+    background-image: url('../images/Group 14.png');
+    background-size: contain;
+}
+
+.goat-content h2 {
+    color: #0B0223;
+    font-size: 3rem;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.goat-content h1 {
+    font-size: 6rem;
+    font-weight: 800;
+    color: transparent;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+.goat-description {
+    color: #534C64;
+    font-size: 1.25rem;
+    font-weight: 500;
+    margin-top: 1rem;
+}
+.tomato-btn{
+    background-color: #FF42A5;
+}
+.blue-btn{
+    background-color: #4EC5F7;
+}
+.goat-img img {
+    width: 100%;
+}
