--- a/styles/mobile-responsive.css
+++ b/styles/mobile-responsive.css
@@ -133,27 +133,68 @@
         left: -5rem;
         padding-left: 20%;
     }
-    .career-container{
+
+    .career-container {
         padding: 0;
         margin: 3rem 0;
     }
-    .career-content{
+
+    .career-content {
         width: 100%;
         padding: 10% 10%;
     }
+
     .career-img {
         width: 100%;
     }
+
     .career-list .right-list {
         margin-right: 0;
     }
-    .career-content p,li{
+
+    .career-content p,
+    li {
         font-size: 0.7rem;
     }
+
     .career-btn {
         color: #FF42A5;
         font-size: 0.7rem;
         font-weight: 600;
         text-transform: uppercase;
+    }
+
+    .game-list-container {
+        padding: 0;
+    }
+
+    .game-list-card {
+        width: calc(80%/3);
+        margin-bottom: 2.75rem;
+        border-radius: 3rem;
+        background-color: white;
+        font-size: 0.4rem;
+        padding: 0.125rem;
+    }
+
+    .game-list-card img {
+        width: 35%;
+    }
+
+    .footer-nav ul,
+    .footer-links ul,
+    .footer-icons {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+
+    .footer-links ul{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+    .copyright{
+        text-align: center;
+        font-size: 0.7rem;
+        max-width: 13rem;
     }
 }
