--- a/styles/style.css
+++ b/styles/style.css
@@ -209,8 +209,34 @@ nav {
 .video-card {
     text-align: left;
     width: calc(100% - 10px);
+    position: relative;
 }
-
+.video-watch{
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    background-color: rgba(0, 0, 0,0.6);
+    height: 105%;
+    width: 100%;
+    border-radius: 1rem;
+    border: 4px solid #FF42A5;
+    color: #FF42A5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.video-watch i{
+    font-size: 3rem;
+    color: white;
+    margin: 1rem;
+}
+.video-card:hover{
+    .video-watch{
+        visibility: visible;
+    }
+}
 .video-card img {
     width: 100%;
 }
