--- a/styles/style.css
+++ b/styles/style.css
@@ -241,15 +241,6 @@ nav {
     width: 100%;
 }
 
-/* .video-card:hover {
-    border-radius: 16px;
-    height: 400px;
-    width: 342px;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
-    background-blend-mode: overlay;
-} */
-
-/* play styles */
 
 .play-container {
     padding: 0 10%;
@@ -336,6 +327,8 @@ nav {
 /* game list styles */
 
 .game-list-container {
+    max-width: 1452px;
+    margin: auto;
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
     padding: 0 10%;
     display: flex;
